# SASCA-ReS

./: CMakeLists.txt  README.md  setup.sh
docs/: README.md  default_experiment.ini  example.ini
external_libs/: CMakeLists.txt
includes/: abm.h  graph.h  utils.h
src/: abm.cpp  graph.cpp  main.cpp
